--- a/index.html
+++ b/index.html
@@ -4,11 +4,31 @@
 <head>
     <title> Hotel Chalé - Cidade </title>
     <meta charset="utf8">
+
+    <!-- Link da foha css da página -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
 
-    <h1>Título da página</h1>
+    <!-- Início de container -->
+    <div id="container">
+        <!-- Início de topo -->
+        <div id="topo">
+
+            <div id="area-logo">
+                <h1>
+                    <a href="">Hotel Chalé</a>
+                </h1>
+            </div>
+            <div id="area-menu">
+                menu
+            </div>
+
+            <!-- Fim de topo -->
+        </div>
+        <!-- Fim de container -->
+    </div>
 
 </body>
 
