Adicionado estrutura dos locais informados na area de menu

--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
         <div id="topo">
 
             <div id="area-logo">
-                <h1>
+                <h1 class="logo">
                     <a href="">Hotel Chalé</a>
                 </h1>
             </div>
             <div id="area-menu">
-                menu
+                <div id="conteudo-menu">
+                    <div id="menu-locais">
+                        <span>
+                            Rio de Janeiro - São Paulo - Belo Horizonte
+                        </span>
+                        <a href="">Reservar</a>
+                    </div>
+                </div>
             </div>
 
             <!-- Fim de topo -->
