Adicionado estrutura dos locais informados na area de menu

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div id="area-menu">
                 <div id="conteudo-menu">
                     <div id="menu-locais">
-                        <span>
+                        <span class="locais">
                             Rio de Janeiro - São Paulo - Belo Horizonte
                         </span>
-                        <a href="">Reservar</a>
+                        <a class="reservar" href="">Reservar</a>
                     </div>
                 </div>
             </div>
