Texto dos locais alterado de span para link

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div id="area-menu">
                 <div id="conteudo-menu">
                     <div id="menu-locais">
-                        <span class="locais">
+                        <a  class="locais" href="">
                             Rio de Janeiro - São Paulo - Belo Horizonte
-                        </span>
+                        </a>
                         <a class="reservar" href="">Reservar</a>
                     </div>
                 </div>
