Textos dos locais alterados de span para tres links cada palavra

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div id="area-menu">
                 <div id="conteudo-menu">
                     <div id="menu-locais">
-                        <a  class="locais" href="">
-                            Rio de Janeiro - São Paulo - Belo Horizonte
-                        </a>
+                        <a class="locais" href="">Rio de Janeiro -&nbsp;</a>
+                        <a class="locais" href=""> São Paulo -&nbsp;</a>
+                        <a class="locais" href=""> Belo Horizonte</a>
                         <a class="reservar" href="">Reservar</a>
                     </div>
                 </div>
