--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
                         <a class="locais" href=""> Belo Horizonte</a>
                         <a class="reservar" href="">Reservar</a>
                     </div>
+
+                    <div id="barra-navegacao-menu">
+                        <ul id="navegacao">
+                            <li><a href="">Home</a></li>
+                            <li><a href="">História</a></li>
+                            <li><a href="">Imprensa</a></li>
+                            <li><a href="">Gastronomia</a></li>
+                            <li><a href="">Contato</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
