Imagem adicionada na area de menu

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                             <li><a href="">Gastronomia</a></li>
                             <li><a href="">Contato</a></li>
                         </ul>
+
+                        <img class="logo-II" src="imagens/logo-II.jpg">
                     </div>
                 </div>
             </div>
