--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <li><a href="">Contato</a></li>
                         </ul>
 
-                        <img class="logo-II" src="imagens/logo-II.jpg">
+                        <img class="logo-II" src="imagens/depoimento.png">
                     </div>
                 </div>
             </div>
