Estrutura rodape adicionada

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
         <!-- Fim de container -->
     </div>
 
+    <!-- Início rodape -->
+    <div id="container-rodape">
+        <div id="rodape">
+            &copy; Copyright 2000-2021 Hotel Chalé
+        </div>
+        <!-- Fim rodape -->
+    </div>
+
 </body>
 
 </html>
