--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <!-- Início rodape -->
     <div id="container-rodape">
         <div id="rodape">
-            &copy; Copyright 2000-2021 Hotel Chalé
+            &copy; Copyright 2000-2021 Hotel Chalé<br>
+            <span class="empresa-dev">Desenvolido por Eduardo Isidoro</span>
         </div>
         <!-- Fim rodape -->
     </div>
