Estrutura de conteudo adicionada

--- a/index.html
+++ b/index.html
@@ -48,35 +48,39 @@
         </div>
 
         <div id="area-principal">
-            <h2>Título do conteúdo</h2>
+            <div class="conteudo">
+                <h2>Título do conteúdo</h2>
 
-            <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                when an unknown printer took a galley of type and scrambled it to make a type
-                specimen book. It has survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was popularised in
-                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                and more recently with desktop publishing software like Aldus PageMaker including
-                versions of Lorem Ipsum.
-            </p>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type
+                    specimen book. It has survived not only five centuries, but also the leap into
+                    electronic typesetting, remaining essentially unchanged. It was popularised in
+                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+                    and more recently with desktop publishing software like Aldus PageMaker including
+                    versions of Lorem Ipsum.
+                </p>
+            </div>
         </div>
 
         <div id="area-lateral">
-            <ul>
-                <li>
-                    <a href="">
-                        <img src="">
+            <div class="conteudo">
+                <ul>
+                    <li>
+                        <a href="">
+                            <img src="">
 
-                        <h3> Título do conteúdo</h3>
+                            <h3> Título do conteúdo</h3>
 
-                        <p>
-                            Lorem Ipsum has been the industry's
-                            standard dummy text ever since the 1500s...
-                        </p>
-                    </a>
-                </li>
-            </ul>
+                            <p>
+                                Lorem Ipsum has been the industry's
+                                standard dummy text ever since the 1500s...
+                            </p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <!-- Fim de container -->
