Titulos e paragrafos adicionados e estilizados

--- a/index.html
+++ b/index.html
@@ -49,31 +49,43 @@
 
         <div id="area-principal">
             <div class="conteudo">
-                <h2>Título do conteúdo</h2>
+                <h2>Sinta-se em Casa</h2>
 
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book. It has survived not only five centuries, but also the leap into
-                    electronic typesetting, remaining essentially unchanged. It was popularised in
-                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-                    and more recently with desktop publishing software like Aldus PageMaker including
-                    versions of Lorem Ipsum.
+                    Um local de tranquilidade em meio a tanta correria da cidade. É isso que você
+                    pode encontrar aqui no Hotel Chale. Aqui você terá a possibilidade de aproveitar
+                    o melhor clima do município, uma bela natureza, e permanecendo a minutos do centro
+                    da cidade. Ainda poderá se deliciar com um delicioso café da manhã com o melhor
+                    gostinho da nossa terra terra. Venha se realizar de ótimos momento com toda sua
+                    família, sem deixar seu melhor amiguinhos de fora, pois aqui também hospedamos
+                    animais de pequeno porte.
                 </p>
 
-                <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book.
-                </p>
+                <h2>Seu Casamento</h2>
 
                 <p>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                    when an unknown printer took a galley of type and scrambled it to make a type
-                    specimen book.
+                    Que tal usufruir de toda tranquilidade de um hotel/chale com o momento mais
+                    importante de sua vida ? Fazendo festas de casamento com nosso salão de eventos
+                    e hospedando seus amigos e família conosco, você garante que tudo fique em um só lugar
+                    e evite que muitas preocupações ofusquem um dos momentos mais maravilhoso de sua vida.
+                </p>
+
+                <h2>Confraternizações</h2>
+
+                <p>
+                    Venha com todo seu pessoal e relize confraternizações no Hotel Chale, conte com um espaço
+                    que contém uma infraestrutura para aproveitar ao máximo. Possuímos uma estrutura voltada ao conforto
+                    e ao máximo de aproveitamento em festas de confraternização, contanto inclusive com um bar
+                    á beira da piscina.
+                </p>
+
+                <h2>Gastronomia</h2>
+
+                <p>
+                    Além do delicioso café da manhã, os clientes do Hotel Chale podem saborear uma excelente
+                    experiência gastronômica através do Room Service e no nosso Restaurante. Em um ambiente
+                    climatizado, contemporâneo e descontráido, o Restaurante oferece os melhores pratos da
+                    gastronomia brasileira, preparados com produtos da mais alta qualidade.
                 </p>
             </div>
         </div>
