--- a/index.html
+++ b/index.html
@@ -95,7 +95,33 @@
                 <ul>
                     <li>
                         <a href="">
-                            <img src="">
+                            <img src="imagens/apartamento.jpg">
+
+                            <h3> Título do conteúdo</h3>
+
+                            <p>
+                                Lorem Ipsum has been the industry's
+                                standard dummy text ever since the 1500s...
+                            </p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <img src="imagens/apartamento.jpg">
+
+                            <h3> Título do conteúdo</h3>
+
+                            <p>
+                                Lorem Ipsum has been the industry's
+                                standard dummy text ever since the 1500s...
+                            </p>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="">
+                            <img src="imagens/apartamento.jpg">
 
                             <h3> Título do conteúdo</h3>
 
