Adicionado estrutura para lista lateral da area de conteudo

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <ul>
                     <li>
                         <a href="">
-                            <img src="imagens/apartamento.jpg">
+                            <img class="imagem-lista" src="imagens/apartamento.jpg">
 
                             <h3> Título do conteúdo</h3>
 
@@ -108,7 +108,7 @@
 
                     <li>
                         <a href="">
-                            <img src="imagens/apartamento.jpg">
+                            <img class="imagem-lista" src="imagens/apartamento.jpg">
 
                             <h3> Título do conteúdo</h3>
 
@@ -121,7 +121,7 @@
 
                     <li>
                         <a href="">
-                            <img src="imagens/apartamento.jpg">
+                            <img class="imagem-lista" src="imagens/apartamento.jpg">
 
                             <h3> Título do conteúdo</h3>
 
