Titulo e paragrafo escritos com conteudos para o site implementado

--- a/index.html
+++ b/index.html
@@ -97,37 +97,37 @@
                         <a href="">
                             <img class="imagem-lista" src="imagens/apartamento.jpg">
 
-                            <h3> Título do conteúdo</h3>
+                            <h3>Apartamento</h3>
 
                             <p>
-                                Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s...
+                                Excelentes apartamentos com quartos climatizados, banheiras,
+                                camas aconchegantes e muito mais.
                             </p>
                         </a>
                     </li>
 
                     <li>
                         <a href="">
-                            <img class="imagem-lista" src="imagens/apartamento.jpg">
+                            <img class="imagem-lista" src="imagens/restaurante.jpg">
 
-                            <h3> Título do conteúdo</h3>
+                            <h3>Restaurante</h3>
 
                             <p>
-                                Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s...
+                                Os melhores pratos da gastronomia brasileira preparados pelos
+                                maiores chefes do município.
                             </p>
                         </a>
                     </li>
 
                     <li>
                         <a href="">
-                            <img class="imagem-lista" src="imagens/apartamento.jpg">
+                            <img class="imagem-lista" src="imagens/piscina.jpg">
 
-                            <h3> Título do conteúdo</h3>
+                            <h3>Piscina</h3>
 
                             <p>
-                                Lorem Ipsum has been the industry's
-                                standard dummy text ever since the 1500s...
+                                Com um belo design inovador e exclusivo, contemos uma maravilhosa
+                                piscina para se banharem.
                             </p>
                         </a>
                     </li>
