Titulo e paragrafo escritos com conteudos para o site implementado

--- a/index.html
+++ b/index.html
@@ -131,6 +131,19 @@
                             </p>
                         </a>
                     </li>
+
+                    <li>
+                        <a href="">
+                            <img class="imagem-lista" src="imagens/recepcao.jpg">
+
+                            <h3>Atendimento</h3>
+
+                            <p>
+                                Uma Recepção limpa, organizada e profissional, para que os clientes
+                                tenha a melhor atendimento.
+                            </p>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
