Estrutura de lista adequada de acordo com novo id adicionado

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <div id="area-lateral">
             <div class="conteudo">
-                <ul>
+                <ul id="beneficios">
                     <li>
                         <a href="">
                             <img class="imagem-lista" src="imagens/apartamento.jpg">
